influxdb/base/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  type: ClusterIP
